[GPU Process] (REGRESSION r285597): Fix SVGFilter clamping calculation https://bugs.webkit.org/show_bug.cgi?id=233843

Reviewed by Simon Fraser.

Source/WebCore:

In this patch:

1. lastEffect() is made virtual function of Filter and it's already
   implemented as non-virtual function in both CSSFilter and SVGFilter.

2. The clamping calculations for SVGFilter and CSSFilter are merged in
   one function called Filter::clampFilterRegionIfNeeded(). This merge
   makes the new function is the only caller to FilterEffect::maxEffectRect().

3. Remove FilterEffect::maxEffectRect() . It can be calculated by clipping
   the FilterEffect::filterPrimitiveSubregion() to filterRegion() and then
   scaling the result by filterScale().

4. In RenderSVGResourceFilter::applyResource() we need to pass the non-
   scaled drawingRegion to ImageBuffer::sizeNeedsClamping() because this
   function starts by scaling the argument 'size' by the argument 'scale'.
   So we were doubling the scaling by passing 'absoluteDrawingRegion'

5. SVGRenderingContext::createImageBuffer() needs to use ImageBuffer::
   sizeNeedsClamping() instead of using ImageBuffer::clampedSize(). The
   former function clamps the size to the MaxClampedArea. But the later
   function shrinks the size to { MaxClampedLength, MaxClampedLength }.
   When calling createImageBuffer() from RenderSVGResourceFilter::
   applyResource() we do not expect any further clamping. But if we pass
   a size with a side  greater than MaxClampedLength to clampedSize(),
   it  will be clamped even if the area is less than MaxClampedArea. And
   for filters we clamp to the area.

* platform/graphics/filters/Filter.cpp:
(WebCore::Filter::clampFilterRegionIfNeeded):
* platform/graphics/filters/Filter.h:
* platform/graphics/filters/FilterEffect.cpp:
(WebCore::FilterEffect::determineFilterPrimitiveSubregion):
(WebCore::FilterEffect::apply):
* platform/graphics/filters/FilterEffect.h:
(WebCore::FilterEffect::maxEffectRect const): Deleted.
(WebCore::FilterEffect::setMaxEffectRect): Deleted.
* rendering/CSSFilter.cpp:
(WebCore::CSSFilter::lastEffect const):
(WebCore::CSSFilter::lastEffect): Deleted.
(WebCore::CSSFilter::determineFilterPrimitiveSubregion): Deleted.
* rendering/CSSFilter.h:
* rendering/RenderLayerFilters.cpp:
(WebCore::RenderLayerFilters::beginFilterEffect):
* rendering/svg/RenderSVGResourceFilter.cpp:
(WebCore::RenderSVGResourceFilter::applyResource):
* rendering/svg/SVGRenderingContext.cpp:
(WebCore::SVGRenderingContext::createImageBuffer):
* svg/graphics/filters/SVGFilter.h:

LayoutTests:

Unskip two layout tests which were skipped in r285597.

* TestExpectations:



Canonical link: https://commits.webkit.org/244858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286526 268f45cc-cd09-0410-ab3c-d52691b4dbfc